--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -102,7 +102,7 @@
     <div class="container">
       <div class="row gx-0">
 
-        <div class="col-lg-6 d-flex flex-column justify-content-center">
+        <div class="col-lg-6 col-sm-6 col-md-6 d-flex flex-column justify-content-center">
           <div class="content">
             <h1>Our bestsellers</h1>
             <p>
@@ -114,7 +114,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6 d-flex align-items-center">
+        <div class="col-lg-6 col-sm-6 col-md-6 d-flex align-items-center">
           <img src="assets/img/about.png" class="img-fluid" alt="">
         </div>
 
