--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -190,7 +190,7 @@
 
       <div class="row">
 
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <div class="box">
             <img src="assets/img/value1.jpg" class="img-fluid" alt="">
             <h3>Nguyễn Đại Dương</h3>
@@ -198,7 +198,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 mt-3 mt-lg-0">
+        <div class="col-lg-3 col-md-3 col-sm-6 mt-3 mt-lg-0">
           <div class="box">
             <img src="assets/img/value2.jpg" class="img-fluid" alt="">
             <h3>Võ Thị Mai Hiền</h3>
@@ -206,7 +206,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 mt-3 mt-lg-0">
+        <div class="col-lg-3 col-md-3 col-sm-6 mt-3 mt-lg-0">
           <div class="box">
             <img src="assets/img/value3.jpg" class="img-fluid" alt="">
             <h3>Fugit cupiditate alias nobis.</h3>
@@ -215,7 +215,7 @@
         </div>
 
 
-        <div class="col-lg-3 mt-3 mt-lg-0">
+        <div class="col-lg-3 col-md-3 col-sm-6 mt-3 mt-lg-0">
           <div class="box">
             <img src="assets/img/value3.jpg" class="img-fluid" alt="">
             <h3>Fugit cupiditate alias nobis.</h3>
