--- a/kakascorner/product.html
+++ b/kakascorner/product.html
@@ -294,7 +294,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="sport_product">
-          <figure><img src="assets/img/product/lmmmbgc.webp" alt="img" style="width: 47%"></figure>
+          <figure><img src="assets/img/product/lmmmbgc.png" alt="img" style="width: 47%"></figure>
           <h3> $<strong class="price_text">165</strong></h3>
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -304,7 +304,7 @@
 
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="sport_product">
-          <figure><img src="assets/img/product/lmrrc.webp" alt="img" style="width: 47%"></figure>
+          <figure><img src="assets/img/product/lmrrc.png" alt="img" style="width: 47%"></figure>
           <h3> $<strong class="price_text">340</strong></h3>
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -314,7 +314,7 @@
 
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="sport_product">
-          <figure><img src="assets/img/product/lmc.webp" alt="img" style="width: 47%"></figure>
+          <figure><img src="assets/img/product/lmc.png" alt="img" style="width: 47%"></figure>
           <h3> $<strong class="price_text">345</strong></h3>
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -327,7 +327,7 @@
 
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="sport_product">
-          <figure><img src="assets/img/product/lmtro.webp" alt="img" style="width: 47%"></figure>
+          <figure><img src="assets/img/product/lmtro.png" alt="img" style="width: 47%"></figure>
           <h3> $<strong class="price_text">250</strong></h3>
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -337,7 +337,7 @@
 
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="sport_product">
-          <figure><img src="assets/img/product/lmtc.webp" alt="img" style="width: 47%"></figure>
+          <figure><img src="assets/img/product/lmtc.png" alt="img" style="width: 47%"></figure>
           <h3> $<strong class="price_text">200</strong></h3>
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -347,7 +347,7 @@
 
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="sport_product">
-          <figure><img src="assets/img/product/lmc.webp" alt="img" style="width: 47%"></figure>
+          <figure><img src="assets/img/product/lmc.png" alt="img" style="width: 47%"></figure>
           <h3> $<strong class="price_text">345</strong></h3>
           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
