--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -154,21 +154,21 @@
 
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <div class="sport_product">
-              <figure><img src="assets/img/project/lamer1.webp" alt="img" class="lamer1"></figure>
+              <figure><img src="assets/img/project/lamer1.png" alt="img" class="lamer1"></figure>
               <h3> $<strong class="price_text">165</strong></h3>
               <h4>La Mer Mini Miracle Broth™ Glow Collection</h4>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 ">
             <div class="sport_product">
-              <figure><img src="assets/img/project/lamer2.webp" alt="img" style="width: 100%"></figure>
+              <figure><img src="assets/img/project/lamer2.png" alt="img" style="width: 100%"></figure>
               <h3> $<strong class="price_text">340</strong></h3>
               <h4>La Mer Regimen Renewal Collection</h4>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 ">
             <div class="sport_product">
-              <figure><img src="assets/img/project/lamer3.webp" alt="img" style="width: 100%"></figure>
+              <figure><img src="assets/img/project/lamer3.png" alt="img" style="width: 100%"></figure>
               <h3> $<strong class="price_text">650</strong></h3>
               <h4>Genaissance de la Mer The Concentrated Night Balm</h4>
             </div>
