--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -78,24 +78,40 @@
     </div>
   </nav>
 
+  <div class="CSSgal">
 
-  <!-- JBT -->
-  <div class="jumbotron jumbotron-fluid custom1 hero d-flex align-items-center">
-    <div class="container">
-      <div class="row">
-        <div class=" col-lg-6 justify-content-center">
-          <h1 class="display-4">Kaka's Corner</h1>
-          <h2 class="lead">Discover our bestsellers.</h2>
-        </div>
-        <div class="col-lg-12">
-          <a class="btn btn-primary btn-lg btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center"
-            href="#about" role="button"><span>Learn more</span><i class="bi bi-arrow-right"></i></a>
-        </div>
+    <!-- Don't wrap targets in parent -->
+    <s id="s1"></s> 
+    <s id="s2"></s>
+    <s id="s3"></s>
+    <s id="s4"></s>
+  
+    <div class="slider">
+      <div style="background: url('https://scontent-sin6-3.xx.fbcdn.net/v/t31.18172-8/11802718_1138303076185066_6540547136134895433_o.jpg?_nc_cat=104&ccb=1-3&_nc_sid=2c4854&_nc_ohc=gMIRIiVI_jcAX-ZxYHL&_nc_ht=scontent-sin6-3.xx&oh=08b9d862bb77f50a6af63df517587dbc&oe=60F336DF'); background-repeat: no-repeat; position: top center; background-size: cover;">
+        <h1><b>KAKA'S CORNER</b></h1>
+        <p>Discover our bestsellers.</p>
+      </div>
+      <div style="background: url('https://scontent-sin6-4.xx.fbcdn.net/v/t31.18172-8/26757959_1979611322054233_7759494182123756886_o.jpg?_nc_cat=103&ccb=1-3&_nc_sid=e3f864&_nc_ohc=ISZlMjzw_j8AX9V606s&_nc_ht=scontent-sin6-4.xx&oh=b6ddb47b54de2fde1d45afa2a7aeb5a3&oe=60F2094D'); background-repeat: no-repeat; position: top center; background-size: cover;">
+        <h2>Slide 2</h2>
+      </div>
+      <div style="background: url('https://scontent-sin6-4.xx.fbcdn.net/v/t1.18169-9/10917357_1016161478399227_5969636352177677724_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=9267fe&_nc_ohc=x8xcsApa_SYAX9hcG5L&_nc_ht=scontent-sin6-4.xx&oh=16eb941e06816b737a7c1118ab1826fc&oe=60D374B7'); background-repeat: no-repeat; position: top center; background-size: cover;">
+        <h2>Slide 3</h2>
+      </div>
+      <div style="background: url('https://scontent-sin6-3.xx.fbcdn.net/v/t31.18172-8/10626401_1117594508255923_1078640223971784095_o.jpg?_nc_cat=104&ccb=1-3&_nc_sid=2c4854&_nc_ohc=GZIWvqBMst8AX_5J4tE&_nc_ht=scontent-sin6-3.xx&oh=536206a124020ca37121aa859b31911e&oe=60F31022'); background-repeat: no-repeat; position: top center; background-size: cover;">
+        <h2>Slide 4</h2>
       </div>
     </div>
+    
+    <div class="prevNext">
+      <div><a href="#s4"><i class="bi bi-arrow-left"></i></a><a href="#s2"><i class="bi bi-arrow-right"></i></a></div>
+      <div><a href="#s1"><i class="bi bi-arrow-left"></i></a><a href="#s3"><i class="bi bi-arrow-right"></i></a></div>
+      <div><a href="#s2"><i class="bi bi-arrow-left"></i></a><a href="#s4"><i class="bi bi-arrow-right"></i></a></div>
+      <div><a href="#s3"><i class="bi bi-arrow-left"></i></a><a href="#s1"><i class="bi bi-arrow-right"></i></a></div>
+    </div>
+    
   </div>
 
-
+  
 
   <!-- BESTSELLERS -->
   <section id="about" class="about">
