--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -120,11 +120,11 @@
         <p>Discover our bestsellers.</p>
       </div>
       <div style="background: url('https://scontent-sin6-4.xx.fbcdn.net/v/t31.18172-8/26757959_1979611322054233_7759494182123756886_o.jpg?_nc_cat=103&ccb=1-3&_nc_sid=e3f864&_nc_ohc=ISZlMjzw_j8AX9V606s&_nc_ht=scontent-sin6-4.xx&oh=b6ddb47b54de2fde1d45afa2a7aeb5a3&oe=60F2094D'); background-repeat: no-repeat; position: top center; background-size: cover;">
-        <h1><a href="product.html" style="color: white"><b>All Products</b></a></h1>
+        <h1><a href="product.html"><b>All Products</b></a></h1>
         <p style="color:black">Shop our must-haves from our reliable partners.</p>
       </div>
       <div style="background: url('https://scontent-sin6-4.xx.fbcdn.net/v/t1.18169-9/10917357_1016161478399227_5969636352177677724_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=9267fe&_nc_ohc=x8xcsApa_SYAX9hcG5L&_nc_ht=scontent-sin6-4.xx&oh=16eb941e06816b737a7c1118ab1826fc&oe=60D374B7'); background-repeat: no-repeat; position: top center; background-size: cover;">
-        <h1><a href="help.html" style="color: white"><b>Help & Support</b></a></h1>
+        <h1><a href="help.html"><b>Help & Support</b></a></h1>
         <p>Get help from our FAQ.</p>
       </div>
       <div style="background: url('https://scontent-sin6-3.xx.fbcdn.net/v/t31.18172-8/10626401_1117594508255923_1078640223971784095_o.jpg?_nc_cat=104&ccb=1-3&_nc_sid=2c4854&_nc_ohc=GZIWvqBMst8AX_5J4tE&_nc_ht=scontent-sin6-3.xx&oh=536206a124020ca37121aa859b31911e&oe=60F31022'); background-repeat: no-repeat; position: top center; background-size: cover;">
