--- a/kakascorner/contact.html
+++ b/kakascorner/contact.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kaka's Corner - All Products</title>
-  <meta content="" name="description">
+  <title>Kaka's Corner - Contact us</title>
+  <meta content="Contact us now for support!" name="description">
 
   <meta content="" name="keywords">
 
