--- a/kakascorner/contact.html
+++ b/kakascorner/contact.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Kaka's Corner - Contact us</title>
-  <meta content="Contact us now for support!" name="description">
+  <meta content="Contact us now for 24/7 support!" name="description">
 
   <meta content="" name="keywords">
 
