--- a/kakascorner/help.html
+++ b/kakascorner/help.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Kaka's Corner - Help & Support</title>
-  <meta content="" name="description">
+  <meta content="Get quick help and support through our FAQ section" name="description">
 
   <meta content="" name="keywords">
 
