--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Kaka's Corner - Home</title>
-  <meta content="" name="description">
+  <meta content="Shop our must-haves NOW for a youthful skin!" name="description">
 
   <meta content="" name="keywords">
 
