--- a/kakascorner/product.html
+++ b/kakascorner/product.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Kaka's Corner - All Products</title>
-  <meta content="" name="description">
+  <meta content="Have a look at all of our products from reliable partners! This must be the smartest decision in this year!" name="description">
 
   <meta content="" name="keywords">
 
