--- a/kakascorner/signsucc.html
+++ b/kakascorner/signsucc.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Login">
-    <meta name="description" content="Login page using RWD">
+    <meta name="description" content="Sign up successful! Now, please log in.">
     <meta name="charset" content="UTF-8">
     <meta name="lang" content="en-US">
 
