--- a/kakascorner/index.html
+++ b/kakascorner/index.html
@@ -123,7 +123,7 @@
         <h1><a href="product.html"><b>All Products</b></a></h1>
         <p style="color:black">Shop our must-haves from our reliable partners.</p>
       </div>
-      <div style="background: url('https://scontent-sin6-4.xx.fbcdn.net/v/t1.18169-9/10917357_1016161478399227_5969636352177677724_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=9267fe&_nc_ohc=x8xcsApa_SYAX9hcG5L&_nc_ht=scontent-sin6-4.xx&oh=16eb941e06816b737a7c1118ab1826fc&oe=60D374B7'); background-repeat: no-repeat; position: top center; background-size: cover;">
+      <div style="background: url('https://scontent.fdad2-1.fna.fbcdn.net/v/t1.18169-9/14963216_1479381098743927_3870430952667052213_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=19026a&_nc_ohc=NCVWOzvp2VUAX8O41yq&_nc_ht=scontent.fdad2-1.fna&oh=6519ba2ca39f570bb4e9d7bbe62e9583&oe=60DCBE9B'); background-repeat: no-repeat; position: top center; background-size: cover;">
         <h1><a href="help.html"><b>Help & Support</b></a></h1>
         <p>Get help from our FAQ.</p>
       </div>
