--- a/index.html
+++ b/index.html
@@ -128,23 +128,17 @@
                         data-aos-delay="200">
                         <div class="content">
                             <h3>Chúng tôi là ai?</h3>
-                            <h2>Là những bạn trẻ</h2>
+                            <h2>Là những bạn trẻ!</h2>
                             <p>
                                 <b>Kode</b> là một cộng đồng gồm những bạn trẻ có niềm đam mê với IT. Hầu hết thành viên
                                 nơi đây chỉ là học sinh và sinh viên, đến đây qua những lời giới thiệu của cộng đồng
                                 mạng.
                             </p>
-                            <h2>Lĩnh vực nghiên cứu</h2>
+                            <h2>Lĩnh vực nghiên cứu của chúng tôi</h2>
                             <p>
-                                Các vấn đề về công nghệ thông tin và lập trình.
+                                Những sản phẩm có thể giúp ích cho mọi người, đặc biệt là cộng đồng lập trình viên người Việt!
                             </p>
-                            <div class="text-center text-lg-start">
-                                <a href="#"
-                                    class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-                                    <span>Tìm hiểu thêm</span>
-                                    <i class="bi bi-arrow-right"></i>
-                                </a>
-                            </div>
+                            
                         </div>
                     </div>
 
