--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <div class="count-box">
                             <i class="bi bi-headset" style="color: #15be56;"></i>
                             <div>
-                                <span data-purecounter-start="0" data-purecounter-end="2876"
+                                <span data-purecounter-start="0" data-purecounter-end="3876"
                                     data-purecounter-duration="1" class="purecounter"></span>
                                 <p>Giờ tương tác</p>
                             </div>
@@ -308,14 +308,14 @@
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="600">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Tổ chức các buổi gặp mặt, giao lưu</h3>
+                                    <h3>Tổ chức các buổi gặp mặt, giao lưu offline</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="700">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Chia sẻ các trang thiết bị nghiên cứu</h3>
+                                    <h3>Cùng chia sẻ các trang thiết bị nghiên cứu</h3>
                                 </div>
                             </div>
 
@@ -344,7 +344,7 @@
                                         <h4>Phát triển từng ngày</h4>
                                         <p>Bạn có thể giao lưu với thành viên Kode bất cứ khi nào, do đó bạn sẽ cùng
                                             cộng đồng Kode tiến bộ từng ngày (kĩ năng mềm, chuyên môn, khả năng ngoại
-                                            ngữ và cả sự tự tin).</p>
+                                            ngữ... và cả SỰ TỰ TIN).</p>
                                     </div>
                                 </div>
 
@@ -353,7 +353,7 @@
                                     <div>
                                         <h4>Tương tác trên nhiều "mặt trận"</h4>
                                         <p>Kode phổ rộng trên nhiều nền tảng và cách tiếp cận với bạn, như đặt mã nguồn trên
-                                            GitHub, thảo luận bằng Discord, video trên YouTube, cập nhật tin tức tại Facebook.</p>
+                                            GitHub, thảo luận bằng Discord, video hướng dẫn trên YouTube, cập nhật tin tức tại Facebook.</p>
                                     </div>
                                 </div>
 
@@ -450,7 +450,7 @@
                                 <li>Bắt đầu từ 2021</li>
                                 <li>Ngôn ngữ JavaScript</li>
                             </ul>
-                            <a href="#" class="btn-buy">Tìm hiểu thêm</a>
+                            <a href="#" class="btn-buy"><s>Tìm hiểu thêm</s></a>
                         </div>
                     </div>
 
@@ -528,7 +528,7 @@
 
                 <header class="section-header">
                     <h2>Hỏi và đáp</h2>
-                    <p>Câu hỏi thường gặp</p>
+                    <p>Những câu hỏi thường gặp</p>
                 </header>
 
                 <div class="row">
@@ -659,10 +659,10 @@
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
-                            <li data-filter="*" class="filter-active">Tấ cả</li>
-                            <li data-filter=".filter-device">Thiết bị</li>
+                            <li data-filter="*" class="filter-active">Tất cả</li>
+                           <!-- <li data-filter=".filter-device">Thiết bị</li>
                             <li data-filter=".filter-com">Cuộc thi</li>
-                            <li data-filter=".filter-off">Offline</li>
+                             <li data-filter=".filter-off">Offline</li> -->
                         </ul>
                     </div>
                 </div>
@@ -767,7 +767,7 @@
             <div class="container" data-aos="fade-up">
 
                 <header class="section-header">
-                    <h2>Người khác nói gì về Kode</h2>
+                    <h2>Mọi người nói gì về Kode</h2>
                 </header>
 
                 <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="200">
@@ -1073,7 +1073,7 @@
                                     <div class="loading">Đang gửi</div>
                                     <div class="error-message"></div>
                                     <div class="sent-message">Thư của bạn đã được gửi. Cảm ơn bạn vì đã giúp Kode ngày một tốt
-                                        đẹp hơn!</div>
+                                     hơn!</div>
 
                                     <button type="submit">Gửi ngay</button>
                                 </div>
@@ -1104,7 +1104,7 @@
                     </div>
                     <div class="col-lg-6">
                         <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Đăng kí">
+                            <input type="email" name="email"><input type="submit" value="Đăng ký">
                         </form>
                     </div>
                 </div>
@@ -1135,7 +1135,7 @@
                     </div>
 
                     <div class="col-lg-2 col-6 footer-links">
-                        <h4>Liên kết</h4>
+                        <h4>Liên kết hữu ích</h4>
                         <ul>
                             <li><i class="bi bi-chevron-right"></i> <a href="index.html">Trang chủ</a></li>
                             <li><i class="bi bi-chevron-right"></i> <a href="about.html">Về chúng tôi</a></li>
@@ -1147,7 +1147,7 @@
                     </div>
 
                     <div class="col-lg-2 col-6 footer-links">
-                        <h4>Các liên kết khác</h4>
+                        <h4 style="visibility: hidden;">...</h4>
                         <ul>
                             <li><i class="bi bi-chevron-right"></i> <a href="product.html">Sản phẩm</a></li>
                             <li><i class="bi bi-chevron-right"></i> <a href="project.html">Dự án</a></li>
@@ -1183,7 +1183,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and edit with ❤ by <a
+                Template by <a href="https://bootstrapmade.com/">BootstrapMade</a> and edit with ❤ by <a
                     href="https://www.github.com/kodestudio">@koder</a>
             </div>
         </div>
